Trying to fix radio and checkbox size on safari browser

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -114,7 +114,7 @@
     /* display: inline; */
     margin-bottom: 0px;
     margin-right: 5px;
-    transform: scale(1.3);
+    /* transform: scale(1.3); */
   }
   label > input {
     width: 20px;
